--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
             <img src="japan.svg" alt="Japan">
             <img src="usa.svg" alt="Usa">
           </div>
+
+          <div class="loader">
+            <div class="circle"></div>
+            <div class="circle active"></div>
+            <div class="circle"></div>
+          </div>
+
+          <button class="destinations__button">
+            <a href="#!">
+              <img src="arrow-right.svg" alt="arrow">
+              <p>Find More</p>
+            </a>
+          </button>
         </div>
       </div>
     </div>
