--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Travel Portal</title>
   </head>
   <body>
-    <header class="header">
+    <div class="top"><a href="#header">&#8593;</a></div>
+
+    <header class="header" id="header">
         <div class="header__inner">
           <div class="logo logo__header">
             <img src="logo.svg" alt="Logo">
@@ -38,7 +41,7 @@
                   </li>
             </ul>
           </nav>
-            <button class="button button-login">
+            <button class="button-login">
               <a href="#">Login</a></button>
         </div>
     </header>
@@ -106,13 +109,90 @@
             <div class="circle"></div>
           </div>
 
-          <button class="destinations__button">
+          <button class="button destinations__button">
             <a href="#!">
               <img src="arrow-right.svg" alt="arrow">
               <p>Find More</p>
             </a>
           </button>
         </div>
+      </div>
+    </div>
+
+    <div class="stories">
+      <div class="stories__container">
+        <div class="stories__inner">
+          <h2 class="stories__title">
+            TRAVEL STORIES
+          </h2>
+
+          <div class="stories__product">
+            <div class="stories__product-item">
+              <div class="stories__product-image">
+                <img src="product-image1.svg" alt="image">
+              </div>
+              <div class="stories__product-text">
+                <h2 class="stories__product-title">10 Photos of Attractive Thailand</h2>
+                <p class="stories__product-descrition">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#!">Read More</a></p>
+              </div>
+            </div>
+            <div class="stories__product-item">
+              <div class="stories__product-image">
+                <img src="product-image2.svg" alt="image">
+              </div>
+              <div class="stories__product-text">
+                <h2 class="stories__product-title">10 Photos of Attractive Thailand</h2>
+                <p class="stories__product-descrition">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#!">Read More</a></p>
+              </div>
+            </div>
+            <div class="stories__product-item">
+              <div class="stories__product-image">
+                <img src="product-image3.svg" alt="image">
+              </div>
+              <div class="stories__product-text">
+                <h2 class="stories__product-title">10 Photos of Attractive Thailand</h2>
+                <p class="stories__product-descrition">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#!">Read More</a></p>
+              </div>
+            </div>
+            <div class="stories__product-item">
+              <div class="stories__product-image">
+                <img src="product-image4.svg" alt="image">
+              </div>
+              <div class="stories__product-text">
+                <h2 class="stories__product-title">10 Photos of Attractive Thailand</h2>
+                <p class="stories__product-descrition">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit... <a href="#!">Read More</a></p>
+              </div>
+              
+            </div>
+            <button class="button stories__button">
+              <a href="#!">
+                <img src="arrow-right.svg" alt="arrow">
+                <p>See More</p>
+              </a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="copyright">
+      <div class="copyright__container">
+        <div class="copyright__inner">
+          <p>All Rights Reserved © Travel Portal</p>
+
+
+        <div class="social">
+          <div class="instagram">
+            <a href="#!"><img src="instagram.svg" alt="instagram"></a>
+          </div>
+          <div class="youtube">
+            <a href="#!"><img src="youtube.svg" alt="youtube"></a>
+          </div>
+          <div class="twitter">
+            <a href="#!"><img src="twitter.svg" alt="twitter"></a>
+          </div>
+        </div>
+      </div>
       </div>
     </div>
     <script type="module" src="/src/main.js"></script>
